# dice-roller-godot

./: LICENSE  README.md
.github/workflows/: build.yml  cmake.yml  static.yml
assets/: d6.blend1  d6.glb
assets/d10/: d10.blend  d10.blend1  d10.glb  d10.xcf
assets/d12/: d12.blend  d12.blend1  d12.glb  d12.xcf
assets/d20/: d20.blend  d20.blend1  d20.glb  d20.xcf
assets/d4/: d4.blend  d4.xcf
assets/d6/: d6.blend  d6.blend1  d6.xcf
assets/d8/: d8 - numbers.xcf  d8.blend  d8.blend1  d8.xcf
godot/: .gitignore  Main.tscn  Menu.tscn  export_presets.cfg  icon.svg.import  project.godot
godot/assets/: material-tray.tres  theme-base.tres  theme-textedit-transparent.tres
nodes/: CMakeLists.txt  Makefile.toml
nodes/src/: diceequation.cc  diceequation.hh  dicemanager.cc  dicemanager.hh  diceresults.cc  diceresults.hh  dienode.cc  dienode.hh  direction.cc  direction.hh  hellocpp.cc  hellocpp.hh  mainmenu.cc  mainmenu.hh  printonsleep.cc  printonsleep.hh  registry.cc  rollresult.hh  uilogic.cc  uilogic.hh
page/: Cargo.toml  Dioxus.toml  index.html  package-lock.json  package.json
page/src/: main.rs
page/src/components/: app.rs  bg.rs  mod.rs  section.rs
page/stylus/: app.styl  content.styl  footer.styl  header.styl  mixins.styl  queries.styl
page/web/: index.html
page/web/assets/: app.css
page/web/assets/dioxus/: dice-roller-godot-github-page.js  dice-roller-godot-github-page_bg.wasm
page/web/assets/dioxus/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
page/web/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
(+32 files in other folders)
