[package]
name = "dice-roller-godot-github-page"
authors = ["Peter Lunneberg"]
description = "Github Pages page for Dice Roller (Godot) - https://github.com/nemesisx00/dice-roller-godot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
console_error_panic_hook = "0.1.7"
dioxus = "0.3.2"
dioxus-web = "0.3.1"
log = "0.4.17"
wasm-logger = "0.2.0"
